--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
    "dependencies": {
     "mongodb": "x",
-    "nedb": "^1.1.1"
+    "nedb": "^1.1.1",
+    "socket.io": "1.4.5"
   },
   "repository": {
     "type": "git",
