--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
    "dependencies": {
     "mongodb": "x",
     "nedb": "^1.1.1",
-    "socket.io": "1.4.5"
+    "socket.io": "~1.4.5"
   },
   "repository": {
     "type": "git",
